Filled in Static Tables for Uses, Calls, Modifies, Parent, Follows,
Fixed Uncaught IndexOutOfRangeException in Proc / Var Table

Fixed Stmt cannot be 0 in Modifies Table

Finally figured out how to do unit testing in UnitTesting project

--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -35,7 +35,6 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ParentTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\PKB.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\TableTester.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\UsesTable.cpp" />
     <ClCompile Include="AssignmentParser.cpp" />
     <ClCompile Include="ASTNode.cpp" />
@@ -55,7 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -78,7 +77,7 @@
   <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level1</WarningLevel>
       <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
