--- a/$P@/SPA/UnitTesting/UnitTesting.vcxproj
+++ b/$P@/SPA/UnitTesting/UnitTesting.vcxproj
@@ -42,7 +42,7 @@
       <WarningLevel>Level1</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(SolutionDir)source;$(SolutionDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -75,27 +75,24 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\TableTester.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestAssnParser.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestBuildAST.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.cpp" />
     <ClCompile Include="TestCalls.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestFollows.cpp" />
     <ClCompile Include="TestModifies.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestParent.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.cpp" />
     <ClCompile Include="TestUses.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.cpp" />
     <ClCompile Include="source\UnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\stdAfx.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestAssnParser.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestBuildAST.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestCallsTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestFollows.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.h" />
     <ClInclude Include="TestModifies.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestParent.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.h" />
     <ClInclude Include="TestUses.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
