Parser Bug fix, VarTable Bug fix, integrated with autotester

--- a/$P@/SPA/AutoTester/AutoTester.vcxproj
+++ b/$P@/SPA/AutoTester/AutoTester.vcxproj
@@ -57,7 +57,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)lib\AutoTester_debug.lib;$(SolutionDir)$(Configuration)\SPA.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>F:\3201_3202\SPA\$P@\SPA\lib\AutoTester_debug.lib;F:\3201_3202\SPA\$P@\SPA\Debug\SPA.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
