i tried to test query processor,
the comments i put inside for the ones i tested with problem
not sure if is bug or i not yet implemented.

and jk try the Source DE Test2.txt
i put the soruce in comment above the test liaoz
for some reason cannot create ast

--- a/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj.filters
+++ b/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\source\TestBuildAST.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
