--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -12,17 +12,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\CallsTable.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\ConditionNode.h" />
+    <ClInclude Include="QueryCondNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\FollowsTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.h" />
+    <ClInclude Include="QueryEnums.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ParentTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\PKB.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\ProjectNode.h" />
-    <ClInclude Include="..\..\..\$p%40\spa\spa\queryparser.h" />
+    <ClInclude Include="QueryProjectNode.h" />
+    <ClInclude Include="QueryParser.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryPreprocessor.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryTreeBuilder.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryTreeNode.h" />
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\RelationshipNode.h" />
+    <ClInclude Include="QueryRelNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\SelectNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\UsesTable.h" />
     <ClInclude Include="AssignmentParser.h" />
@@ -39,17 +40,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\CallsTable.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\ConditionNode.cpp" />
+    <ClCompile Include="QueryCondNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\FollowsTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ModifiesTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\ParentTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\PKB.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\ProjectNode.cpp" />
+    <ClCompile Include="QueryProjectNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryParser.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryPreprocessor.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryTreeBuilder.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryTreeNode.cpp" />
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\RelationshipNode.cpp" />
+    <ClCompile Include="QueryRelNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\SelectNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\TableTester.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\UsesTable.cpp" />
