--- a/$P@/SPA/SPA/SPA.vcxproj.filters
+++ b/$P@/SPA/SPA/SPA.vcxproj.filters
@@ -66,15 +66,6 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\ParentTable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\ConditionNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\ProjectNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\$p%40\spa\spa\queryparser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryPreprocessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -84,10 +75,22 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryTreeNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\RelationshipNode.h">
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\SelectNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\$P%40\SPA\SPA\SelectNode.h">
+    <ClInclude Include="QueryEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QueryProjectNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QueryParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QueryRelNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QueryCondNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -149,12 +152,6 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\TableTester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\ConditionNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\ProjectNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryPreprocessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -164,10 +161,16 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryTreeNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\RelationshipNode.cpp">
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\SelectNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\$P%40\SPA\SPA\SelectNode.cpp">
+    <ClCompile Include="QueryProjectNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="QueryRelNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="QueryCondNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
