--- a/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj
+++ b/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\source\TestBuildAST.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.cpp" />
     <ClCompile Include="source\IntegrationTest.cpp" />
@@ -75,6 +76,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\source\TestBuildAST.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.h" />
   </ItemGroup>
