--- a/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj.filters
+++ b/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\source\TestBuildAST.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
