Preparation work for Exercise IEvalQuery I Pwn Joo
TypeDef vector<vector<QueryTreeNode*> to QueryTree in QTBuilder

Added Class IEvalQuery for Fill in the blank exercise

OPS Plan:
IEvalQuery class accepts a parameter QueryTree

IEvalQuery class Evaluates each and every cluster independently

IEvalQuery class intersects all results sets

IEvalQuery Class Contains 8 Methods Uses, Modifies, Parent Parent* Follow Follow* for fill in the blank exercise

IEvalQuery will return the results as a string and NOT as vector of string.. encapsulation of the result set from outside world necessary

Time: 1100 to 1600 GMT +8

1600 - 1630 Exercise Cut For Briefing

1630 - 2200 Exercise Resume

2200 - Exercise CUT

--- a/$P@/SPA/SPA/SPA.vcxproj.filters
+++ b/$P@/SPA/SPA/SPA.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="QuerySelNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\IEvalQuery.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ASTNode.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ASTExprNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\IEvalQuery.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
