--- a/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj.filters
+++ b/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryEvaluator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\source\TestBuildAST.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryEvaluator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
