--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\CallsTable.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\SPA\IEvalQuery.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryEvaluator.h" />
     <ClInclude Include="QuerySelNode.h" />
     <ClInclude Include="QueryCondNode.h" />
@@ -41,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\CallsTable.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\IEvalQuery.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryEvaluator.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QuerySelNode.cpp" />
     <ClCompile Include="QueryCondNode.cpp" />
@@ -72,7 +74,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
