--- a/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj
+++ b/$P@/SPA/IntegrationTesting/IntegrationTesting.vcxproj
@@ -70,6 +70,9 @@
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryEvaluator.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryPreprocessor.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryTreeBuilder.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\IntegrationTesting\TestSingleQueryEvaluator.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.cpp" />
     <ClCompile Include="source\IntegrationTest.cpp" />
@@ -79,6 +82,9 @@
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestDesignExtractor.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryEvaluator.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryParser.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryPreprocessor.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestQueryTreeBuilder.h" />
+    <ClInclude Include="..\..\..\$P%40\SPA\IntegrationTesting\TestSingleQueryEvaluator.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestProcTable.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\UnitTesting\TestVarTable.h" />
   </ItemGroup>
