--- a/$P@/SPA/AutoTester/AutoTester.vcxproj
+++ b/$P@/SPA/AutoTester/AutoTester.vcxproj
@@ -59,6 +59,18 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>F:\3201_3202\SPA\$P@\SPA\lib\AutoTester_debug.lib;F:\3201_3202\SPA\$P@\SPA\Debug\SPA.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <CustomBuildStep>
+      <Command>
+      </Command>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Outputs>
+      </Outputs>
+    </CustomBuildStep>
+    <PreBuildEvent>
+      <Command>
+      </Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
