--- a/$P@/SPA/SPA/SPA.vcxproj
+++ b/$P@/SPA/SPA/SPA.vcxproj
@@ -15,6 +15,7 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\Helper.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\IEvalQuery.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryLastSelNode.h" />
+    <ClInclude Include="..\..\..\$p%40\spa\spa\querypatternnode.h" />
     <ClInclude Include="QuerySelNode.h" />
     <ClInclude Include="QueryCondNode.h" />
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\FollowsTable.h" />
@@ -46,6 +47,7 @@
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\Helper.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\IEvalQuery.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryLastSelNode.cpp" />
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryPatternNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QuerySelNode.cpp" />
     <ClCompile Include="QueryCondNode.cpp" />
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\FollowsTable.cpp" />
