--- a/$P@/SPA/SPA/SPA.vcxproj.filters
+++ b/$P@/SPA/SPA/SPA.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="..\..\..\$P%40\SPA\SPA\QueryLastSelNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\$p%40\spa\spa\querypatternnode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ASTNode.cpp">
@@ -183,6 +186,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryLastSelNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\$P%40\SPA\SPA\QueryPatternNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
